# mcp-example

./: .gitignore  MCP_SERVERS_LIST.md
.claude/: settings.local.json
audio-mcp/: README.md  audio_processor.py  audio_server.py  pyproject.toml  requirements.txt  utils.py
client/mcp-client/: client.py  pyproject.toml
weather/: weather.py
web-scraping-mcp/: README.md  pyproject.toml  requirements.txt  web_scraper.py  web_scraping_server.py  web_utils.py
