[project]
name = "web-scraping-mcp"
version = "0.1.0"
description = "Web Scraping and Research MCP Server"
authors = [
    {name = "MCP Tutorial", email = "tutorial@example.com"}
]
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.24.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "python-dateutil>=2.8.0"
]

[project.optional-dependencies]
search = [
    "googlesearch-python>=1.2.0",
    "duckduckgo-search>=3.9.0"
]
pdf = [
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.9.0"
]
advanced = [
    "newspaper3k>=0.2.8",
    "readability-lxml>=0.8.0",
    "trafilatura>=1.6.0"
]
all = [
    "web-scraping-mcp[search,pdf,advanced]"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
web-scraping-mcp = "web_scraping_server:main"